[gd_scene load_steps=8 format=3 uid="uid://dd1oi36eb5q7w"]

[ext_resource type="Texture2D" uid="uid://n3n12uy80fkq" path="res://Assets/Proto1BGs/battleback7.png" id="1_qcaxv"]
[ext_resource type="Script" path="res://Code/UI/Screens/game_over_screen.gd" id="1_uvldx"]

[sub_resource type="FontVariation" id="FontVariation_w6jxy"]
variation_embolden = 0.4

[sub_resource type="LabelSettings" id="LabelSettings_ejcnj"]
font = SubResource("FontVariation_w6jxy")
font_size = 80
font_color = Color(0.89, 0.89, 0.89, 1)
outline_size = 20
outline_color = Color(0.43, 0.23736, 0.0172, 0.909804)
shadow_size = 15
shadow_color = Color(0.04, 0.04, 0.04, 0.533333)
shadow_offset = Vector2(1, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a56gg"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.5, 0.324333, 0.19, 0.933333)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.08, 0.08, 0.08, 0.627451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2qnlc"]
bg_color = Color(0.36, 0.22536, 0.1224, 0.933333)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ea3tq"]
bg_color = Color(0.568025, 0.372846, 0.224033, 0.933333)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.08, 0.08, 0.08, 0.627451)

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uvldx")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -12.0
offset_right = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qcaxv")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 70
vertical = true

[node name="MarginContainer" type="MarginContainer" parent="BoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 125

[node name="CenterContainer" type="CenterContainer" parent="BoxContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="BoxContainer/MarginContainer/CenterContainer"]
layout_mode = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_ejcnj")
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="BoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="TryAgainButton" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("StyleBoxFlat_a56gg")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_2qnlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_ea3tq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2qnlc")
theme_override_styles/normal = SubResource("StyleBoxFlat_a56gg")
keep_pressed_outside = true
text = "Try Again"

[node name="RestartButton" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("StyleBoxFlat_a56gg")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_2qnlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_ea3tq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2qnlc")
theme_override_styles/normal = SubResource("StyleBoxFlat_a56gg")
keep_pressed_outside = true
text = "Start Over"

[node name="TitleScreenButton" type="Button" parent="BoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("StyleBoxFlat_a56gg")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_2qnlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_ea3tq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2qnlc")
theme_override_styles/normal = SubResource("StyleBoxFlat_a56gg")
keep_pressed_outside = true
text = "Title Screen"

[connection signal="pressed" from="BoxContainer/VBoxContainer/TryAgainButton" to="." method="_on_try_again_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="BoxContainer/VBoxContainer/TitleScreenButton" to="." method="_on_title_screen_button_pressed"]
